--- a/src/personal/templates/personal/changePassword.html
+++ b/src/personal/templates/personal/changePassword.html
@@ -2,29 +2,26 @@
 
 {% block content %}
 <style>
-    .content{
-        background: gainsboro;
-    }
-    form label,form a,h1{
-        text-shadow: 1px 1px 2px black,
-                     0 0 1em gainsboro,
-                     0 0 0.2em gainsboro;;
-    }
-    form a:hover{
+    .btn{
         color: black;
+        background-color: #fd9801;
     }
-    form button{
-        border-radius: 20px;
-        border: 2px solid #ffffff;
-        -webkit-text-stroke: .2px black;
+    form .btn{
+        width: 100%;
     }
-    form button:hover{
-        background-color: white;
-        border: 2px solid #000000;
+    .btn:hover{
+        background-color: #fd9801;
+    }
+    .row{
+        margin-top: 16px;
+    }
+    input{
+        width: 100%;
     }
 </style>
 <div class="container-fluid white-text content">
-    <br><br>
+    <br>
+    <a class="btn" href="/" style="margin-left: 16px;">Back</a><br>
     <div class="forgot-form">
         <div class="row">
             <div class="col text-center">
@@ -34,33 +31,31 @@
         <form id="forgot" method="post" action="forgotpassword_setnew"> 
             {% csrf_token %}
             <div class="row">
-                <div class="col-sm-6 text-end">
+                <div class="col-sm-4 text-end">
                     <label for="password">New Password:</label>
                 </div>
-                <div class="col-sm-6 text-start">
+                <div class="col-sm-7 text-start">
                     <input type="password" placeholder="Enter New Password" id="password" name="password" required>  
                 </div>
             </div>
             <div class="row" style="margin-top: 8px;">
-                <div class="col-sm-6 text-end">
+                <div class="col-sm-4 text-end">
                     <label for="conpassword">Confirm Password:</label>
                 </div>
-                <div class="col-sm-6 text-start">
+                <div class="col-sm-7 text-start">
                     <input type="password" placeholder="Confirm Password" id="conpassword" name="conpassword" required>  
                 </div>
             </div>
             <div class="row" style="margin-top: 8px;">
-                <div class="col-sm-6"></div>
-                <div class="col-sm-6 text-start">  
+                <div class="col-sm-4"></div>
+                <div class="col-sm-3 text-start">  
+                    <button type="submit" class="btn" {% if msg == "Changed Successfully!" %}disabled{% endif %}>Submit</button>
+                </div>
+                <div class="col-sm-5">
                     {% if msg == "Changed Successfully!" %}
-                    <button type="submit" disabled>Submit</button>
+                    <label class="success">{{msg}}</label>
                     {% else %}
-                    <button type="submit">Submit</button>
-                    {% endif %} 
-                    {% if msg == "Changed Successfully!" %}
-                    <label>{{msg}}</label>
-                    {% else %}
-                    <label style="color: red;">{{msg}}</label>
+                    <label class="error">{{msg}}</label>
                     {% endif %}
                 </div>
             </div>
