--- a/src/personal/templates/personal/signup.html
+++ b/src/personal/templates/personal/signup.html
@@ -110,7 +110,7 @@
                             <label for="mobileNumber">Mobile Number:</label>
                         </div>
                         <div class="col-sm-3">
-                            <input type="number" placeholder="Enter Mobile Number" id="mobileNumber" name="mobileNumber" required>        
+                            <input type="text" placeholder="Enter Mobile Number" id="mobileNumber" name="mobileNumber" required>        
                         </div>
                     </div>
                     <div class="row">
