--- a/src/personal/templates/personal/forgotpass2.html
+++ b/src/personal/templates/personal/forgotpass2.html
@@ -2,24 +2,27 @@
 
 {% block content %}
 <style>
-    .content{
-        background: gainsboro;
-    }
-    form a:hover{
+    .btn{
         color: black;
+        background-color: #fd9801;
     }
-    form button{
-        border-radius: 20px;
-        border: 2px solid #ffffff;
-        -webkit-text-stroke: .2px black;
+    form .btn{
+        width: 100%;
     }
-    form button:hover{
-        background-color: white;
-        border: 2px solid #000000;
+    .btn:hover{
+        background-color: #fd9801;
+    }
+    #otp{
+        width: 100%;
+    }
+    .row{
+        margin-top: 16px;
     }
 </style>
 <div class="container-fluid white-text content content-background">
-    <br><br>
+    <br>
+    <a class="btn" href="/forgotpassword" style="margin-left: 16px;">Back</a>
+    <br>
     <div class="forgot-form">
         <div class="row">
             <div class="col text-center">
@@ -29,17 +32,19 @@
         <form id="forgot" method="post" action="/forgotpassword_otp">  
             {% csrf_token %}  
             <div class="row">
-                <div class="col-sm-6 text-end">
+                <div class="col-sm-3 text-end">
                     <label for="otp">OTP:</label>
                 </div>
-                <div class="col-sm-6 text-start">
-                    <input type="number" placeholder="Enter OTP" id="otp" name="otp" required>        
+                <div class="col-sm-7 text-start">
+                    <input type="text" placeholder="Enter OTP" id="otp" name="otp" required>        
                 </div>
             </div>
             <div class="row" style="margin-top: 8px;">
-                <div class="col-sm-6"></div>
-                <div class="col-sm-6 text-start">   
-                    <button type="submit">Submit</button>
+                <div class="col-sm-3"></div>
+                <div class="col-sm-3 text-start">   
+                    <button type="submit" class="btn">Submit</button>
+                </div>
+                <div class="col-sm-6">
                     <label style="color: red;">{{ msg }}</label>
                 </div>
             </div>
