--- a/src/personal/templates/personal/profile.html
+++ b/src/personal/templates/personal/profile.html
@@ -7,16 +7,12 @@
     }
     .content a{
         color: black;
-        display: inline;
+        width: 100%;
         text-shadow: none;
-        margin-right: 36px;
-    }
-    .row{
-        padding-bottom: 24px;
     }
     .border{
-        width: 100%;
-        height: 500px;
+        width: 800px;
+        height: 760px;
         padding: 30px;
     }
     .btn{
@@ -25,77 +21,113 @@
     .btn:hover{
         background-color: #fd9801;
     }
+    .data .col-sm-3{
+        border-right: solid;
+    }
+    .col-sm-8 p{
+        margin-left: 12px;
+        font-size: large;
+    }
 </style>
 <div class="container-fluid content">
     <div class="container">
         <br>
-        <div class="border">
-            <div class="row">
-                <h2>My Profile</h2>
+        <div class="container border">
+            <div class="row text-center">
+                <h1>Profile</h1>
             </div>
-            <div class="row">
-                <div class="col-sm-2 ">
-                    <p>User ID: </p>
+            <br>
+            <div class="data">
+                <div class="row">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-3">
+                        <p>User ID: </p>
+                    </div>
+                    <div class="col-sm-8">
+                        <p>{{ request.user.id }}</p>
+                        <div class="section-separator"></div>
+                    </div>
                 </div>
-                <div class="col-sm-4">
-                    <p>{{ request.user.id }}</p>
+                <div class="row">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-3">
+                        <p>Username: </p>
+                    </div>
+                    <div class="col-sm-8">
+                        <p>{{ request.user.username }}</p>
+                        <div class="section-separator"></div>
+                    </div>
                 </div>
-                <div class="col-sm-2 ">
-                    <p>Username: </p>
+                <div class="row">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-3">
+                        <p>Firstname: </p>
+                    </div>
+                    <div class="col-sm-8">
+                        <p>{{ request.user.firstname }}</p>
+                        <div class="section-separator"></div>
+                    </div>
                 </div>
-                <div class="col-sm-4">
-                    <p>{{ request.user.username }}</p>
+                <div class="row">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-3">
+                        <p>Lastname: </p>
+                    </div>
+                    <div class="col-sm-8">
+                        <p>{{ request.user.lastname }}</p>
+                        <div class="section-separator"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-3">
+                        <p>Birthdate: </p>
+                    </div>
+                    <div class="col-sm-8">
+                        <p>{{ request.user.birthdate }}</p>
+                        <div class="section-separator"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-3">
+                        <p>Address: </p>
+                    </div>
+                    <div class="col-sm-8">
+                        <p>{{ request.user.address }}</p>
+                        <div class="section-separator"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-3">
+                        <p>Mobile: </p>
+                    </div>
+                    <div class="col-sm-8">
+                        <p>{{ request.user.mobileNumber }}</p>
+                        <div class="section-separator"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-3">
+                        <p>Email: </p>
+                    </div>
+                    <div class="col-sm-8">
+                        <p>{{ request.user.email }}</p>
+                        <div class="section-separator"></div>
+                    </div>
                 </div>
             </div>
+            <br>
             <div class="row">
-                <div class="col-sm-2 ">
-                    <p>Firstname: </p>
+                <div class="col-sm-4"></div>
+                <div class="col-sm-3">
+                    <a class="btn" href="/update_password" >Change Password</a>
                 </div>
-                <div class="col-sm-4">
-                    <p>{{ request.user.firstname }}</p>
+                <div class="col-sm-3">
+                    <a href="/update" class="btn">Update</a>
                 </div>
-                <div class="col-sm-2 ">
-                    <p>Lastname: </p>
-                </div>
-                <div class="col-sm-4">
-                    <p>{{ request.user.lastname }}</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-2 ">
-                    <p>Birthdate: </p>
-                </div>
-                <div class="col-sm-4">
-                    <p>{{ request.user.birthdate }}</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-2 ">
-                    <p>Address: </p>
-                </div>
-                <div class="col-sm-10">
-                    <p>{{ request.user.address }}</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-2 ">
-                    <p>Mobile: </p>
-                </div>
-                <div class="col-sm-4">
-                    <p>{{ request.user.mobileNumber }}</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-2 ">
-                    <p>Email: </p>
-                </div>
-                <div class="col-sm-4">
-                    <p>{{ request.user.email }}</p>
-                </div>
-            </div>
-            <div class="container">
-                <a class="btn" href="/update_password" >Change Password</a>
-                <a href="/update" class="btn">Update</a>
             </div>
         </div>  
         <br>
