--- a/src/personal/templates/personal/updatePassword.html
+++ b/src/personal/templates/personal/updatePassword.html
@@ -44,9 +44,8 @@
         <br>
         <a class="btn" href="/profile">Back</a>
         <br>
-        <br>
-        <div class=" container border">
-            <h2 class="white-text ml12 text-center">Change Password</h2>
+        <div class="container border">
+            <h1>Change Password</h1>
             <hr>
             <form id="signup" method="post" action="/update_password_user">
             {% csrf_token %}
