--- a/src/personal/templates/personal/wallet.html
+++ b/src/personal/templates/personal/wallet.html
@@ -28,6 +28,9 @@
     transform: translate(-50%, -50%);
     z-index: 9999; /* Ensure the modal appears on top of other elements */
 }
+#mygames.active{
+   color: white;
+}
 </style>
 <section class="bg-primary">
    <div class="container-fluid content">
