--- a/src/templates/ModalPopup.html
+++ b/src/templates/ModalPopup.html
@@ -27,11 +27,9 @@
             width: 90%; 
             max-width: 80vh; 
         }
-
         .modal-content {
             width: 100%; 
         }
-
         .modal-body label {
             text-align: right;
             margin-right: 10px;
@@ -39,7 +37,6 @@
         .modal-body p{
             text-align: center;
         }
-     
     </style>
 </head>
 <body>
@@ -48,7 +45,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" style="text-align: center;" id="exampleModalLabel"><span id="type">Type</span> Confirmation</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">X</span>
                     </button>
                 </div>
@@ -72,12 +69,11 @@
                             <input type="text" placeholder="Amount" id="amount" name="amount" readonly>        
                         </div>
                     </div>
-
                 </div>
                 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" id="SaveButton" data-dismiss="modal" style="width: 100px;">Yes</button>
-                    <button type="button" class="btn btn-primary" id="closeButton" data-dismiss="modal" style="width: 100px;">No</button>
+                    <button type="button" class="btn btn-primary" id="closeButton" data-bs-dismiss="modal" style="width: 100px;">No</button>
                 </div>
             </div>
         </div>
