--- a/src/templates/ModalPopupdeposit.html
+++ b/src/templates/ModalPopupdeposit.html
@@ -48,7 +48,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" style="text-align: center;" id="exampleModalLabel"><span id="deposittype">Type</span> Confirmation</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">X</span>
                     </button>
                 </div>
@@ -77,7 +77,7 @@
                 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" id="depositSaveButton" data-dismiss="modal" style="width: 100px;">Yes</button>
-                    <button type="button" class="btn btn-primary" id="closeButton" data-dismiss="modal" style="width: 100px;">No</button>
+                    <button type="button" class="btn btn-primary" id="closeButton" data-bs-dismiss="modal" style="width: 100px;">No</button>
                 </div>
             </div>
         </div>
